--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -33,6 +33,11 @@
 .page-container {
   padding-top: var(--navbar-height);
   min-height: 100vh;
+  background-image: var(--background-image);
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
 }
 
 .content-section {
